# elibz2kicad

./: LICENSE  LICENSE_THIRD_PARTY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
public/example/: elibz2kicad使用教程.md  example.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: jlc_tool.rs  kicad_tool.rs  lib.rs
src/components/: MarkdownViewer.tsx  Sidebar.tsx
